<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="nav_safesearch"
        android:title="@string/cat_safesearch"
        android:persistent="false" />

    <Preference
        android:key="nav_url_filter"
        android:title="@string/cat_url_filter"
        android:persistent="false" />

    <Preference
        android:key="nav_youtube"
        android:title="@string/cat_youtube"
        android:icon="@drawable/ic_engine_youtube"
        android:persistent="false" />

    <Preference
        android:key="nav_classifiers"
        android:title="@string/cat_classifiers"
        android:persistent="false" />

    <Preference
        android:key="nav_doh"
        android:title="@string/cat_doh"
        android:persistent="false" />

    <!-- The default policy is the schedule-less always-on fallback; time
         windows belong to the override policies managed here. -->
    <Preference
        android:key="nav_policies"
        android:title="@string/title_policies"
        android:summary="@string/pref_policies_summary"
        android:persistent="false" />

    <Preference
        android:key="nav_block_page"
        android:title="@string/cat_block_page"
        android:persistent="false" />

    <Preference
        android:key="nav_apps"
        android:title="@string/title_app_picker"
        android:summary="@string/per_app_hint"
        android:persistent="false" />

    <Preference
        android:key="nav_logs"
        android:title="@string/title_logs"
        android:summary="@string/pref_logs_summary"
        android:persistent="false" />

    <Preference
        android:key="nav_analytics"
        android:title="@string/title_analytics"
        android:summary="@string/pref_analytics_summary"
        android:persistent="false" />

    <Preference
        android:key="nav_general"
        android:title="@string/cat_general"
        android:persistent="false" />

    <Preference
        android:key="nav_security"
        android:title="@string/cat_security"
        android:persistent="false" />
</PreferenceScreen>
