<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:key="doh_enabled"
        android:title="@string/pref_enabled"
        android:defaultValue="false" />

    <ListPreference
        android:key="doh_server_preset"
        android:title="@string/pref_doh_preset"
        android:entries="@array/doh_preset_labels"
        android:entryValues="@array/doh_preset_values"
        android:defaultValue="https://1.1.1.3/dns-query"
        app:useSimpleSummaryProvider="true" />

    <!-- Shown only while the preset above is "Custom…" (see PrefsFragment). -->
    <EditTextPreference
        android:key="doh_server"
        android:title="@string/pref_doh_server"
        android:defaultValue="https://1.1.1.3/dns-query"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>
